--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <section id="section1">
-            <h2>Section 1: Introduction</h2>
+            <h2>Section 1: Introductiondfgdfg</h2>
             <p>This is a paragraph in the introduction section. HTML stands for HyperText Markup Language.</p>
         </section>
         <section id="section2">
